--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: CI
 
 #on: [push]
 
-# 在master分支发生push事件时触发。
+# 在main分支发生push事件时触发。
 on:
   push:
     branches:
-      - master
+      - main
 
 env: # 设置环境变量
   TZ: Asia/Shanghai # 时区（设置时区可使页面中的`最近更新时间`使用该时区时间）
